infrastructure/kubernetes/base/patch-imagepullsecret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alphatracer
spec:
  template:
    spec:
      imagePullSecrets:
      - name: ghcr-cred
