infrastructure/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alphatracer-service
spec:
  type: ClusterIP
  ports:
    - port: 8011
      targetPort: 8011
      protocol: TCP
      name: http
  selector:
    app: alphatracer
